--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@dogstudio/highway": "^2.2.1",
-    "gsap": "^3.10.4"
+    "gsap": "^3.10.4",
+    "parcel-bundler": "^1.12.5"
   }
 }
